Modify attendance and payroll to work with Synsiri system: upgrade employee_late_check_in, hr_payroll_community/ add days work(late include), late check-in(afternoon), upgrade late check-in config, add days work input in payslip, create new saraly structure for absence late leave

--- a/custom/dev/employee_late_check_in/views/hr_attendance_views.xml
+++ b/custom/dev/employee_late_check_in/views/hr_attendance_views.xml
@@ -7,8 +7,13 @@
         <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
         <field name="arch" type="xml">
             <field name="check_out" position="after">
+                <field name="late_check_in_afternoon" />
                 <field name="late_check_in"/>
+            </field>
+            <field name="late_check_in" position="after">
+                <field name="days_work_include_late" />
             </field>
         </field>
     </record>
 </odoo>
+
