overwrite _compute_worked_hours, debug _compute_days_work and and _compute_late_check_in for acurate dayswork, add config day_wrok_count_ratio , modify hr_zk_attendance to set time schedule for check-in and check-out, add config setting for schedule,overwrite _compute_worked_hours, debug _compute_days_work and and _compute_late_check_in for acurate dayswork, add config day_wrok_count_ratio

--- a/custom/dev/hr_zk_attendance/views/daily_attendance_views.xml
+++ b/custom/dev/hr_zk_attendance/views/daily_attendance_views.xml
@@ -12,6 +12,9 @@
                 <field name="attendance_type"/>
                 <field name="punching_time"/>
                 <field name="address_id"/>
+                <button name="unlink"
+                            string="Download Data"
+                            type="object" class="oe_highlight"/>
             </tree>
         </field>
     </record>
