--- a/custom/dev/employee_late_check_in/views/res_config_settings_views.xml
+++ b/custom/dev/employee_late_check_in/views/res_config_settings_views.xml
@@ -40,6 +40,11 @@
                          late check-in record can not be create.">
                     <field name="maximum_minutes"/><span>Minutes</span>
                 </setting>
+                <setting id="day_work_count_ratio" company_dependent="1"
+                         help="How much work hour to count a day work
+                            (set 1 for 100% work-hour compare with average day-work from schedule to count as a day work)">
+                    <field name="day_work_count_ratio"/><span>Minutes</span>
+                </setting>
             </block>
             </xpath>
         </field>
