--- a/odoo-17.0/addons/hr_holidays/views/resource_views.xml
+++ b/odoo-17.0/addons/hr_holidays/views/resource_views.xml
@@ -29,9 +29,9 @@
         <field name="mode">primary</field>
         <field name="priority">10</field>
         <field name="arch" type="xml">
-            <xpath expr="//tree" position="attributes">
-                <attribute name="editable">bottom</attribute>
-            </xpath>
+<!--            <xpath expr="//tree" position="attributes">-->
+<!--                <attribute name="editable">bottom</attribute>-->
+<!--            </xpath>-->
             <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="string">Name</attribute>
                 <attribute name="required">1</attribute>
