update saraly rule to compute commission skill and goal, add extra and commission saraly field in hr.contract, debug discipline not show in payslip and comslip input, change clear data for biometric device, add field to distinguish the record that create or write by bio divice or manually edit by user

--- a/custom/dev/gamification_value/views/gamification_goal_definition_views.xml
+++ b/custom/dev/gamification_value/views/gamification_goal_definition_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='description']" position="after">
                 <label for="code"/>
-                    <field name="code" required="1"/>
+                    <field name="code"/>
             </xpath>
         </field>
     </record>
