--- a/custom/dev/hr_insurance/views/hr_salary_rule_views.xml
+++ b/custom/dev/hr_insurance/views/hr_salary_rule_views.xml
@@ -10,11 +10,11 @@
         <field name="appears_on_payslip" eval="True"/>
         <field name="sequence" eval="190"/>
     </record>
-    <record id="hr_rule_input_insurance" model="hr.rule.input">
-        <field name="code">INSUR</field>
-        <field name="name">Insurance Amount</field>
-        <field name="input_id" ref="hr_salary_rule_insurance"/>
-    </record>
+<!--    <record id="hr_rule_input_insurance" model="hr.rule.input">-->
+<!--        <field name="code">INSUR</field>-->
+<!--        <field name="name">Insurance Amount</field>-->
+<!--        <field name="input_id" ref="hr_salary_rule_insurance"/>-->
+<!--    </record>-->
     <record id="hr_payroll_community.structure_base"
             model="hr.payroll.structure">
         <field eval="[(4, ref('hr_salary_rule_insurance'))]"
