--- a/custom/dev/hr_insurance/views/employee_insurance_views.xml
+++ b/custom/dev/hr_insurance/views/employee_insurance_views.xml
@@ -32,6 +32,7 @@
                             <field name="sum_insured"/>
                             <field name="amount"/>
                             <field name="company_id"/>
+                            <field name="code"/>
                         </group>
                     </group>
 
