--- a/custom/dev/ohrms_loan/views/hr_loan_views.xml
+++ b/custom/dev/ohrms_loan/views/hr_loan_views.xml
@@ -5,10 +5,12 @@
         <field name="name">hr.loan.view.tree</field>
         <field name="model">hr.loan</field>
         <field name="arch" type="xml">
-            <tree string="Loan Requests">
+            <tree string="Loan Requests" decoration-success="total_paid_amount >= total_amount">
                 <field name="name"/>
                 <field name="employee_id"/>
                 <field name="loan_amount"/>
+                <field name="total_paid_amount"/>
+                <field name="total_amount"/>
                 <field name="date"/>
                 <field name="state"/>
             </tree>
@@ -48,6 +50,7 @@
                     </div>
                     <group col="4">
                         <field name="employee_id" readonly="state == 'approve'"/>
+                        <field name="detail"/>
                         <field name="date"/>
                         <field name="department_id"/>
                         <field name="job_position"/>
@@ -65,6 +68,7 @@
                             <field name="loan_lines">
                                 <tree string="Installments" editable="bottom">
                                     <field name="date"/>
+                                    <field name="code"/>
                                     <field name="amount"/>
                                     <field name="paid"
                                            column_invisible="True"/>
