Add button confirm all record in late.check.in, Debug late check in afternoon in to calcurate in late.check.in, change employee_late_check_in config 'late check in after' to add delay to check in time instead of compare total late with the 'late check in after'

--- a/custom/dev/employee_late_check_in/views/late_check_in_views.xml
+++ b/custom/dev/employee_late_check_in/views/late_check_in_views.xml
@@ -69,6 +69,11 @@
         <field name="model">late.check.in</field>
         <field name="arch" type="xml">
             <tree string="Late Check-in">
+                <header>
+                    <button name="approve_all_records" string="Approve"
+                            type="object" class="btn-primary"
+                            groups="hr.group_hr_manager"/>
+                </header>
                 <field name="name"/>
                 <field name="employee_id"/>
                 <field name="late_minutes"/>
@@ -77,6 +82,8 @@
             </tree>
         </field>
     </record>
+
+
     <!-- Actions -->
     <record id="late_check_in_action" model="ir.actions.act_window">
         <field name="name">Late Check-in</field>
