debuging hr_insurance use last day of employee instead of confirmed date to compute in payroll, fix resignation to return inurance collect state of insurance when resign

--- a/custom/dev/hr_insurance/views/employee_insurance_views.xml
+++ b/custom/dev/hr_insurance/views/employee_insurance_views.xml
@@ -8,14 +8,14 @@
             <form string="Employee Insurance">
                 <header>
                     <field name="state" widget="statusbar"
-                           statusbar_visible="active,expired"/>
+                           statusbar_visible="active,expired,resignation_confirm"/>
                 </header>
                 <sheet>
                     <group>
                         <group>
                             <field name="employee_id"/>
                             <field name="policy_coverage"/>
-                            <label for="date_from" string="Policy Period"/>
+                            <label for="date_from"/>
                             <div>
                                 <field name="date_from" class="oe_inline"
                                        on_change="1"
@@ -32,7 +32,6 @@
                             <field name="sum_insured"/>
                             <field name="amount"/>
                             <field name="company_id"/>
-                            <field name="code"/>
                         </group>
                     </group>
 
