--- a/custom/dev/hr_insurance/views/insurance_policy_views.xml
+++ b/custom/dev/hr_insurance/views/insurance_policy_views.xml
@@ -12,6 +12,7 @@
                         </group>
                         <group>
                             <field name="company_id"/>
+                            <field name="code"/>
                         </group>
                     </group>
                     <notebook>
