--- a/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
+++ b/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
@@ -6,18 +6,18 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <h2>Pay Slip</h2>
+                        <h2>Pay Slip(ข้อมูลสลิป)</h2>
                         <p t-field="o.name"/>
                         <table class="table table-sm table-bordered">
                             <tr>
                                 <td>
-                                    <strong>Name</strong>
+                                    <strong>Name(ชื่อ-สกุล)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id"/>
                                 </td>
                                 <td>
-                                    <strong>Designation</strong>
+                                    <strong>Designation(ตำแหน่ง)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id.job_id"/>
@@ -31,7 +31,7 @@
                                     <span t-field="o.employee_id.work_email"/>
                                 </td>
                                 <td>
-                                    <strong>Identification No</strong>
+                                    <strong>Identification No(เลขบัตรประชาชน)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id.identification_id"/>
@@ -39,13 +39,13 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>Reference</strong>
+                                    <strong>Reference(เลขที่สลิป)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.number"/>
                                 </td>
                                 <td>
-                                    <strong>Bank Account</strong>
+                                    <strong>Bank Account(เลขบัญชีธนาคาร)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id.bank_account_id"/>
@@ -53,26 +53,26 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>Date From</strong>
+                                    <strong>Date From(ตั้งแต่วันที่)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.date_from"/>
                                 </td>
                                 <td>
-                                    <strong>Date To</strong>
+                                    <strong>Date To(ถึงวันที่)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.date_to"/>
                                 </td>
                             </tr>
                         </table>
-                        <h3>Details by Salary Rule Category</h3>
+                        <h3>Details by Salary Rule Category(รายละเอียดสลิป)</h3>
                         <table class="table table-sm mb32">
                             <thead>
                                 <tr>
-                                    <th>Code</th>
-                                    <th>Salary Rule Category</th>
-                                    <th>Total</th>
+                                    <th>Code(รหัส)</th>
+                                    <th>Salary Rule Category(ประเภท)</th>
+                                    <th>Total(รวม)</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -92,41 +92,66 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <h3>Payslip Lines by Contribution Register</h3>
+<!--                        <h3>Payslip Lines by Contribution Register</h3>-->
+<!--                        <table class="table table-sm mt32">-->
+<!--                            <thead>-->
+<!--                                <tr>-->
+<!--                                    <th>Code</th>-->
+<!--                                    <th>Name</th>-->
+<!--                                    <th>Quantity/rate</th>-->
+<!--                                    <th>Amount</th>-->
+<!--                                    <th>Total</th>-->
+<!--                                </tr>-->
+<!--                            </thead>-->
+<!--                            <tbody>-->
+<!--                                <tr t-foreach="get_lines_by_contribution_register.get(o.id, [])"-->
+<!--                                    t-as="p">-->
+<!--                                    <td>-->
+<!--                                        <span t-esc="p.get('code', '')"/>-->
+<!--                                    </td>-->
+<!--                                    <td>-->
+<!--                                        <span t-esc="p.get('name', '')"/>-->
+<!--                                    </td>-->
+<!--                                    <td>-->
+<!--                                        <span t-esc="p.get('quantity', '')"/>-->
+<!--                                    </td>-->
+<!--                                    <td>-->
+<!--                                        <span t-esc="p.get('amount', 0)"/>-->
+<!--                                    </td>-->
+<!--                                    <td class="text-right">-->
+<!--                                        <span t-esc="p.get('total', 0)"-->
+<!--                                              t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>-->
+<!--                                    </td>-->
+<!--                                </tr>-->
+<!--                            </tbody>-->
+<!--                        </table>-->
+                        <h3>Additional Inputs(รายละเอียดเพิ่มเติม)</h3>
                         <table class="table table-sm mt32">
                             <thead>
                                 <tr>
-                                    <th>Code</th>
-                                    <th>Name</th>
-                                    <th>Quantity/rate</th>
-                                    <th>Amount</th>
-                                    <th>Total</th>
+                                    <th>Name(ชื่อ)</th>
+                                    <th>Code(รหัส)</th>
+                                    <th>Amount(จำนวน)</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr t-foreach="get_lines_by_contribution_register.get(o.id, [])"
-                                    t-as="p">
+                                <tr t-foreach="o.input_line_ids" t-as="input">
                                     <td>
-                                        <span t-esc="p.get('code', '')"/>
+                                        <span t-esc="input.name"/>
                                     </td>
                                     <td>
-                                        <span t-esc="p.get('name', '')"/>
-                                    </td>
-                                    <td>
-                                        <span t-esc="p.get('quantity', '')"/>
-                                    </td>
-                                    <td>
-                                        <span t-esc="p.get('amount', 0)"/>
+                                        <span t-esc="input.code"/>
                                     </td>
                                     <td class="text-right">
-                                        <span t-esc="p.get('total', 0)"
+                                        <span t-esc="input.amount"
                                               t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
+
                         <p class="text-right">
-                            <strong>Authorized signature</strong>
+                            <strong>Authorized signature(ลงชื่อผู้รับสลิป)</strong>
                         </p>
                     </div>
                 </t>
