fix report part 2, net, data salary rule, remove first line for salary rule catagory

--- a/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
+++ b/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
@@ -139,7 +139,7 @@
                                     </thead>
                                     <tbody>
                                         <!-- Loop to display rows for 'BASIC' code -->
-                                        <tr t-foreach="get_details_by_rule_category.get(o.id, [])" t-as="h" t-if="h['category_code'] == 'BASIC'">
+                                        <tr t-foreach="get_details_by_rule_category.get(o.id, [])" t-as="h" t-if="h['category_code'] == 'BASIC' and h['code'] != 'BASIC'">
                                             <td>
                                                 <!-- code = salary rule code -->
                                                 <span t-esc="h['code']"/>
